@@ -84,6 +84,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #26457: Fixed the subnets() methods in IP network classes for the case
+  when resulting prefix length is equal to maximal prefix length.
+  Based on patch by Xiang Zhang.
+
 - Issue #26385: Remove the file if the internal open() call in
   NamedTemporaryFile() fails.  Patch by Silent Ghost.
 
